<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Dashboard"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace" />

   <RelativeLayout
       android:layout_marginTop="50dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ful_name"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Placeholder demo"
        android:textColor="@android:color/black"
        android:layout_toEndOf="@id/full_name"
        android:textSize="16sp" />

   </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Placeholder demo"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@id/email"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/mobile_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_number"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobil_number"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@id/mobile_no"
            android:textSize="16sp" />

    </RelativeLayout>




</LinearLayout>